# drf-auth

./: Dockerfile  README.md  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_phone_number.py  0003_alter_customuser_email.py  0004_auto_20211123_1617.py  0005_auto_20211123_1619.py
cars_api/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
cars_api/migrations/: 0001_initial.py
project/: settings.py  urls.py
